--- a/StronkaBITEHack/src/styles/mainPageStyles/videoPlayer.css
+++ b/StronkaBITEHack/src/styles/mainPageStyles/videoPlayer.css
@@ -1,9 +1,21 @@
+.video-container video::-webkit-media-controls {
+    display: none !important;
+}
+
+.video-container video {
+    appearance: none;
+    -webkit-appearance: none;
+    outline: none;
+    border: none;
+}
+
 .video-container {
     max-width: 30vw;
     border-radius: 50%;
     overflow: hidden;
     align-items: flex-start;
     justify-content: flex-start;
+    box-shadow: 0px 0px 0px 1px orange;
 }
 
 .video-container video {
